[package]
edition = "2021"
name = "sanhelperrs"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"
dirs = "5.0"

[target.'cfg(target_os="windows")'.dependencies]
winreg = "0.52"

[target.'cfg(target_os="linux")'.dependencies]
keyvalues-parser = "0.2.0"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
