[package]
edition = "2021"
name = "sanhelperrs"
author="Jackson0ne"
version = "0.0.4"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"
keypressrs = { path = "../keypress.rs" }
fern = "0.6.2"
log = "0.4.21"
chrono = "0.4.38"
screenshots = { git = "https://github.com/SteamAchievementNotifier/xcap.git" }
active-win-pos-rs = "0.8"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(noop)','cfg(used_linker)'] }

[target.'cfg(target_os="windows")'.dependencies]
winreg = "0.52"
windows = { version="0.61.1", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }

[target.'cfg(target_os="linux")'.dependencies]
dirs = "5.0"
keyvalues-parser = "0.2.0"
x11 = "2.21.0"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
